cmake_minimum_required(VERSION 2.8)
project(vision_depth)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( test_opencv test_opencv.cpp )
add_executable( feature_match feature_match.cpp )
add_executable( camera_calibration camera_calibration.cpp )
add_executable( surf_img_depth surf_img_depth.cpp )
add_executable( image_segmentation image_segmentation.cpp )
add_executable( image_depth image_depth.cpp )
add_executable( match_test match_test.cpp )
add_executable( downscale downscale.cpp )
target_link_libraries( test_opencv ${OpenCV_LIBS} )
target_link_libraries( feature_match ${OpenCV_LIBS} )
target_link_libraries( camera_calibration ${OpenCV_LIBS} )
target_link_libraries( surf_img_depth ${OpenCV_LIBS} )
target_link_libraries( image_segmentation ${OpenCV_LIBS} )
target_link_libraries( image_depth ${OpenCV_LIBS} )
target_link_libraries( match_test ${OpenCV_LIBS} )
target_link_libraries( downscale ${OpenCV_LIBS} )